HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldNameSet/Expected.uv
//! Expected diagnostic metadata for the RecordFieldNameSet rejected-source specimen.

expectedDiagnostic("E-TYP-1902", "def.16.RecordFieldNameSet")
